tests/paczka1/small_fuzzy/64716060.err
Error in line 12: A949 A949 22,52
Error in line 8: zjos23WHh13 A949 73,2
